# testApp

./: README.md  pyproject.toml
Testapp/Testapp/: asgi.py  settings.py  urls.py  wsgi.py
Testapp/app_for_tests/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Testapp/app_for_tests/migrations/: 0001_initial.py  0002_alter_answer_question_alter_question_test_and_more.py
Testapp/templates/app_for_tests/: choose_test.html  index.html  start_test.html  test_create.html  test_result.html
Testapp/templates/tests/: choose_question.html
Testapp/tests/: admin.py  urls.py
Testapp/tests/migrations/: 0001_initial.py
