[tool.poetry]
name = "testapp"
version = "0.1.0"
description = "none"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
colorama = "^0.4.6"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
